style: fix menu z-index

--- a/src/components/home-header/home-header.scss
+++ b/src/components/home-header/home-header.scss
@@ -61,6 +61,7 @@
       background: var(--menu-bg);
       box-shadow: var(--box-shadow-s);
       transition: 0.3s;
+      z-index: 10;
 
       &__item {
         font-size: var(--desktop-nav-font-size);
